# CasperFlow

./: CHART_FIX_SUMMARY.md  README.md  middleware.ts  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/analytics/: page.tsx
app/api/example-secure-route/: route.ts
app/intents/: page.tsx
app/stake/: page.tsx
app/trade/: page.tsx
app/vaults/: page.tsx
components/: account-abstraction.tsx  ai-assistant.tsx  animated-background.tsx  features-section.tsx  footer.tsx  hero-section.tsx  how-it-works-section.tsx  landing-navigation.tsx  navigation.tsx  stats-section.tsx  transaction-history.tsx
components/trading/: asset-selector.tsx  leverage-slider.tsx  market-ticker.tsx  order-book.tsx  order-panel.tsx  portfolio-chart.tsx  position-panel.tsx  trades-feed.tsx  trading-chart.tsx  yield-indicator.tsx
contexts/: positions-context.tsx  wallet-context.tsx
contracts/casperflow/: Cargo.toml  README.md  build.sh  check-readiness.sh  deploy.sh  status.sh
contracts/casperflow/src/: main.rs
lib/: api-security.ts  audit-logger.ts  client-security.ts  crypto-utils.ts  env.ts  error-handling.ts  market-context.tsx  market-data.ts  rate-limit.ts  security-config.ts  security-headers.ts  security-hooks.ts  validation.ts  web3-security.ts  websocket-service.ts  xss-protection.ts
