[package]
name = "casperflow"
version = "1.0.0"
edition = "2021"

[dependencies]
casper-contract = { version = "5.1.1", default-features = false }
casper-types = "6.1.0"
wee_alloc = "0.4.5"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true

[[bin]]
name = "casperflow"
path = "src/main.rs"
